# polymarket-trading-bot-python

./: README.md
polymarket-copytrading-bot/: .env.example  package-lock.json  package.json  tsconfig.json  typedoc.json
polymarket-copytrading-bot/docs/: CHANGELOG_IMPROVEMENTS.md  CODE_IMPROVEMENTS.md  GETTING_STARTED.md  IMPROVEMENTS.md  QUICK_START.md  SIMULATION_GUIDE.md  SIMULATION_QUICKSTART.md  SIMULATION_RUNNER_GUIDE.md  TIERED_MULTIPLIERS.md  TRADER_SELECTION_GUIDE.md
polymarket-copytrading-bot/src/: index-executor.ts  index-monitor.ts  index.ts
polymarket-copytrading-bot/src/config/: copyStrategy.ts  db.ts  env.ts
polymarket-copytrading-bot/src/errors/: index.ts
polymarket-copytrading-bot/src/interfaces/: User.ts
polymarket-copytrading-bot/src/models/: copyExecution.ts  copyPnl.ts  userHistory.ts
polymarket-copytrading-bot/src/scripts/: aggregateResults.ts  auditCopyTradingAlgorithm.ts  auditCopyTradingAlgorithmFixed.ts  checkAllowance.ts  checkBothWallets.ts  checkCopyPnl.ts  checkMyStats.ts  checkPnLDiscrepancy.ts  checkPositionsDetailed.ts  computeGnosisSafeAddress.ts  findGnosisSafeProxy.ts  findRealProxyWallet.ts
polymarket-copytrading-bot/src/services/: ExecutionEngine.ts  OrderValidator.ts  TradeAggregator.ts  copyPnlService.ts  createClobClient.ts  tradeExecutor.ts  tradeMonitor.ts
polymarket-copytrading-bot/src/utils/: logger.ts  (+7 more)
polymarket-endcycle-sniper-bot/: .env.example
polymarket-endcycle-sniper-bot/exports/: bot.py  config.py
polymarket-ladder-trading-bot/: .env.example  ecosystem.config.js  pyproject.toml  requirements.txt
(+8 files in other folders)
