[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "polybot5m"
version = "0.2.0"
description = "Polymarket Liquidity Maker Bot — split USDC.e into YES/NO, limit sell, redeem"
requires-python = ">=3.11"
dependencies = [
    "aiohttp>=3.9",
    "websockets>=12.0",
    "pydantic>=2.6",
    "pydantic-settings>=2.1",
    "pyyaml>=6.0",
    "structlog>=24.1",
    "click>=8.1",
    "rich>=13.7",
    "py-clob-client>=0.34",
    "python-dotenv>=1.0",
    "web3>=6.0",
    "eth-abi>=5.0",
    "eth-utils>=4.0",
]

[project.optional-dependencies]
relayer = [
    "py-builder-relayer-client",
    "py-builder-signing-sdk",
]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "ruff>=0.2",
]

[project.scripts]
polybot5m = "polybot5m.cli:cli"

[tool.hatch.build.targets.wheel]
packages = ["src/polybot5m"]

[tool.hatch.build.targets.sdist]
include = ["src/polybot5m", "config"]
